[gd_scene load_steps=4 format=2]

[ext_resource path="res://gameplay/common/ai/AI.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 180.0

[sub_resource type="CircleShape2D" id=2]
radius = 360.0

[node name="AI" type="Node2D"]
script = ExtResource( 1 )

[node name="FleeArea" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeArea"]
shape = SubResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]
monitoring = false
monitorable = false
collision_layer = 0
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource( 2 )

[node name="ActionTimer" type="Timer" parent="."]
